# CarConnectivity-plugin-homekit

./: CHANGELOG.md  README.md  pyproject.toml  setup_requirements.txt
.github/workflows/: build.yml  build_and_publish.yml
doc/: Config.md
src/carconnectivity_homekit/: carconnectivity_homekit_base.py
src/carconnectivity_plugins/homekit/: plugin.py
src/carconnectivity_plugins/homekit/accessories/: bridge.py  charging.py  charging_plug.py  climatization.py  custom_characteristics.py  dummy_accessory.py  flashing.py  generic_accessory.py  locking_system.py  outside_temperature.py  util.py  window_heating.py
src/carconnectivity_plugins/homekit/ui/: plugin_ui.py
src/carconnectivity_plugins/homekit/ui/templates/: accessories.html
src/carconnectivity_plugins/homekit/ui/templates/homekit/: accessories.html  pairing.html
test/integration_test/: carConnectivity.json
